# channel-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  design.txt
include/: channel.h
tests/: CMakeLists.txt  channel_test.cpp
